fixed weird navbar overflowing issue

--- a/webapp/src/react/app/view-controller/styles/view-controller.scss
+++ b/webapp/src/react/app/view-controller/styles/view-controller.scss
@@ -39,7 +39,7 @@
 }
 
 .nav-bar {
-  margin-left: 10px;
+  padding-left: 10px;
 
   &__actions {
     @include flex(flex);
